@@ -32,3 +32,6 @@
 =opt= normalized-bsg_10_4_5            -4
 =opt= normalized-mds_10_4_3             2
 =opt= normalized-mds_50_25_5            3
+=opt= normalized-t2001.13queen13.1110976730--soft-33-100-0 4
+=opt= bart10.shuffled 0
+=inf= homer06.shuffled
