@@ -14,8 +14,8 @@ instances/MIP/p0033.osil
 instances/MIP/p0548.mps
 instances/MIP/pp08a.mps
 instances/MIP/rgn.mps
-instances/MIP/stein27.mps
-instances/MIP/vpm2.mps
+instances/MIP/stein27.fzn
+instances/MIP/vpm2.fzn
 instances/MIQCP/bip_cross_min.10.10.10.1.pip
 instances/MIQCP/ex1266.mps
 instances/MIQCP/meanvarx.mps
@@ -26,8 +26,11 @@ instances/PseudoBoolean/factor-mod-size=9-P0=67-P1=349-P2=67-P3=499-P4=79-P5=347
 instances/PseudoBoolean/normalized-bsg_10_4_5.opb
 instances/PseudoBoolean/normalized-mds_10_4_3.opb
 instances/PseudoBoolean/normalized-mds_50_25_5.opb
+instances/PseudoBoolean/normalized-t2001.13queen13.1110976730--soft-33-100-0.wbo
 instances/Semicontinuous/meanvarxsc.lp
 instances/Semicontinuous/semicon1.mps
+instances/SAT/bart10.shuffled.cnf
+instances/SAT/homer06.shuffled.cnf
 instances/SOS/findRoot.lp
 instances/SOS/pcu_0.01.lp
 instances/SOS/pcu_0.1.lp
